[package]
name = "blstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-cheon = { version="0.3.0" }
ark-ec = { version="0.4.0-alpha.3" }
ark-bls12-381 = { version="0.3.0" }
ark-std = {version="0.3.0"}
ark-ff = {version="0.4.0-alpha.3"}
num-traits = "0.2"
rand="0.8.3"

prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }

[patch.crates-io]
ark-bls12-cheon = {path = "bls12_cheon"}
ark-ec = { git = "https://github.com/arkworks-rs/algebra", branch="release-0.4" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", branch="release-0.4" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", branch="release-0.4" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
