[package]
name = "hidden-in-plain-sight"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ff = "0.3"
ark-serialize = "0.3"
rand = "0.8"
prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }

[[bin]]
name = "verify-hidden-in-plain-sight"
