[package]
name = "soundness-of-music"
version = "0.1.0"
authors = ["Joe Bebel <joe@heliax.dev>"]
edition = "2018"

[dependencies]
ark-std = "0.3"
ark-ff = "0.3"
ark-ec = "0.3"
ark-serialize = "0.3"
ark-bls12-381 = "0.3"
ark-poly = "0.3"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.13"
prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }
itertools = "0.10.1"

[[bin]]
name = "verify-soundness-of-music"

[lib]
