[package]
name = "strong-adaptivity"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.3"
ark-ff = "0.3"
ark-ec = "0.3"
ark-serialize = { version = "0.3", features = [ "derive" ] }
ark-ed-on-bls12-381 = "0.3"
prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }
blake2 = "0.9"
rand = { version = "0.8", features = [ "std", "std_rng"]}
rand_chacha = "0.3"
base64 = "0.13"


[[bin]]
name = "verify-strong-adaptivity"
