[package]
name = "ark-bls12-cheon"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "The BLS12-381 pairing-friendly elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-bls12-381/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version="0.4.0-alpha.3", default-features = false }
ark-ec = { version="0.4.0-alpha.3", default-features = false }
ark-std = { version="^0.3.0", default-features = false }
ark-serialize = { version="0.4.0-alpha.3", default-features = false }

[dev-dependencies]
hex = "^0.4.0"

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field" ]
scalar_field = []

[[bench]]
name = "bls12_cheon"
path = "benches/bls12_cheon.rs"
harness = false
